force-app/main/default/objects/ReferralLeadSourceMap__c/ReferralLeadSourceMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>When using the Referral form, if there is a referral attached to the lead/contact - these are the available lead source options to pass through to the Opportunity</description>
    <label>Referral Lead Source Map</label>
</CustomObject>