force-app/main/default/objects/ReferralLeadSourceMap__c/fields/Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the field on the account that corresponds to this lead source</inlineHelpText>
    <label>Account Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>