force-app/main/default/objects/ReferralLeadSourceMap__c/fields/IncomingLeadSource__c.field-meta.xml
<CustomField>
    <fullName>IncomingLeadSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This incoming lead source will default the referral type picklist on the referral form</inlineHelpText>
    <label>Incoming Lead Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>