force-app/main/default/objects/ReferralLeadSourceMap__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this value active?</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>