force-app/main/default/objects/ReferralLeadSourceMap__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Label for this option that&apos;s displayed on the form.</inlineHelpText>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>