force-app/main/default/objects/ReferralLeadSourceMap__c/fields/NeedsReferralSource__c.field-meta.xml
<CustomField>
    <fullName>NeedsReferralSource__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this only valid with a referral source?</inlineHelpText>
    <label>Needs Referral Source</label>
    <type>Checkbox</type>
</CustomField>