force-app/main/default/objects/ReferralLeadSourceMap__c/fields/NSS_Source__c.field-meta.xml
<CustomField>
    <fullName>NSS_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For NSS - Inbound vs Outbound (or blank for any).</inlineHelpText>
    <label>NSS Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>