force-app/main/default/objects/ReferralLeadSourceMap__c/fields/OppLeadSource__c.field-meta.xml
<CustomField>
    <fullName>OppLeadSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The lead source we&apos;ll use when creating the selling opportunity</inlineHelpText>
    <label>Opp Lead Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>