force-app/main/default/objects/ReferralLeadSourceMap__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The type of referral partner this is for</inlineHelpText>
    <label>Partner Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>