force-app/main/default/objects/ReferralLeadSourceMap__c/fields/PrimarySourceType__c.field-meta.xml
<CustomField>
    <fullName>PrimarySourceType__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For each source type, a primary record should be selected.</inlineHelpText>
    <label>Primary Source Type</label>
    <type>Checkbox</type>
</CustomField>