force-app/main/default/objects/ReferralLeadSourceMap__c/fields/ReferralBusType__c.field-meta.xml
<CustomField>
    <fullName>ReferralBusType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The business type of the referral account that corresponds to this lead source.</inlineHelpText>
    <label>Referral Bus Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>