force-app/main/default/objects/ReferralLeadSourceMap__c/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The type of referral source (CPA, BANK, FA)</inlineHelpText>
    <label>Source Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>