force-app/main/default/objects/ReferralLeadSourceMap__c/listViews/Outbound.listView-meta.xml
<ListView>
    <fullName>Outbound</fullName>
    <columns>NAME</columns>
    <columns>IncomingLeadSource__c</columns>
    <columns>IsActive__c</columns>
    <columns>Label__c</columns>
    <columns>OppLeadSource__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>ReferralBusType__c</columns>
    <columns>SourceType__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>NeedsReferralSource__c</columns>
    <columns>PrimarySourceType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NSS_Source__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>Outbound</label>
</ListView>